--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -104,12 +104,13 @@ jobs:
         name: What files are available
         run: |
           pwd
-          ls -l
+          ls -l ./
+          ls -l ./sensor-iso/
       -
         name: Build and push ISO image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./sensor-iso/docker/Dockerfile
+          context: sensor-iso
+          file: ./docker/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/hedgehog:${{ steps.extract_branch.outputs.branch }}
