--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -110,7 +110,7 @@ jobs:
         name: Build and push ISO image
         uses: docker/build-push-action@v2
         with:
-          context: sensor-iso
+          context: ./sensor-iso
           file: ./docker/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/hedgehog:${{ steps.extract_branch.outputs.branch }}
