--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -36,36 +36,6 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Build environment setup
-        run: |
-          sudo apt-get -q update
-          sudo env DEBIAN_FRONTEND=noninteractive apt-get install -t focal-backports --no-install-recommends -y -q \
-               apt-transport-https \
-               bc \
-               build-essential \
-               ca-certificates \
-               curl \
-               debhelper-compat \
-               debian-archive-keyring \
-               debootstrap \
-               genisoimage \
-               gettext \
-               git \
-               gnupg2 \
-               imagemagick \
-               jq \
-               pandoc \
-               po4a \
-               rsync \
-               software-properties-common \
-               squashfs-tools \
-               virt-what \
-               xorriso
-            git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules --branch='debian/1%20210407' 'https://salsa.debian.org/live-team/live-build.git' /tmp/live-build
-            cd /tmp/live-build
-            dpkg-buildpackage -b -uc -us
-            sudo dpkg -i /tmp/live-build*.deb
-      -
         name: Checkout
         uses: actions/checkout@v2
       -
@@ -86,12 +56,8 @@ jobs:
           echo "${{ steps.extract_malcolm_version.outputs.mversion }}" > ./shared/version.txt
           echo "${{ secrets.MAXMIND_GEOIP_DB_LICENSE_KEY }}" > ./shared/maxmind_license.txt
           echo "cutting this down for build testing, remove this line once it's working"
-          rm -f ./config/hooks/normal/* ./config/package-lists/*
-          cat /etc/resolv.conf
-          curl http://example.org
-          sudo /usr/bin/env bash ./build.sh
-          cat /etc/resolv.conf
-          curl http://example.org
+          echo 'sudo /usr/bin/env bash ./build.sh' | tee hedgehog-1.0.0.iso
+          echo 'a log file' | tee hedgehog-1.0.0-build.log
           popd
       -
         name: ghcr.io login
@@ -111,6 +77,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./sensor-iso
-          file: ./docker/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/hedgehog:${{ steps.extract_branch.outputs.branch }}
