--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -85,7 +85,7 @@ jobs:
           pushd ./sensor-iso
           echo "${{ steps.extract_malcolm_version.outputs.mversion }}" > ./shared/version.txt
           echo "${{ secrets.MAXMIND_GEOIP_DB_LICENSE_KEY }}" > ./shared/maxmind_license.txt
-          rm -f ./config/package-lists/* ./config/hooks/normal/*
+          rm -f ./config/hooks/normal/*
           sudo /usr/bin/env bash ./build.sh
           rm -rf ./shared/
           sudo chmod 644 ./hedgehog-*.*
