for idaholab/Malcolm#64, use migrating ECS unit into individual parsing sections for log types

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3899,6 +3899,9 @@ filter {
     mutate { id => "mutate_add_field_zeek_uid"
              add_field => { "[zeek][uid]" => "%{[@metadata][uuid]}" } }
   }
+  # ECS - zeek.uid -> event.id
+  mutate { id => "mutate_add_field_ecs_id_uid"
+           merge => { "[event][id]" => "[zeek][uid]" } }
 
   # if present, FUIDs are always a vector (comma-separated)
   if ([zeek][fuid]) { mutate { id => "mutate_split_zeek_fuids"
@@ -3951,6 +3954,11 @@ filter {
       code => "event.set('[timestamp]', (1000*event.get('[zeek][ts]').to_f).round(0))
                event.set('[firstPacket]', event.get('[timestamp]'))"
     }
+
+    # ECS - firstPacket -> event.start
+    mutate { id => "mutate_add_field_ecs_event_start"
+             add_field => { "[event][start]" => "%{[firstPacket]}" } }
+
     if ([zeek_conn]) and ([zeek_conn][duration]) {
       # convert duration (floating-point seconds) to milliseconds
       ruby {
@@ -3958,12 +3966,20 @@ filter {
         code => "event.set('[length]', (1000*event.get('[zeek_conn][duration]').to_f).round(0))
                  event.set('[lastPacket]', event.get('[timestamp]').to_i + event.get('[length]').to_i)"
       }
+      # ECS - zeek_conn.duration -> event.duration
+      ruby {
+        id => "ruby_zeek_duration_to_ecs_event_duration"
+        code => "event.set('[event][duration]', (1000000000 * event.get('[zeek_conn][duration]').to_f).round(0))"
+      }
     } else {
       mutate { id => "mutate_add_field_zeek_lastPacket"
                add_field => { "[lastPacket]" => "%{timestamp}" } }
       mutate { id => "mutate_add_field_zeek_length"
                add_field => { "[length]" => "0" } }
     }
+    # ECS - lastPacket -> event.end
+    mutate { id => "mutate_add_field_ecs_event_end"
+             add_field => { "[event][end]" => "%{[lastPacket]}" } }
 
     # set the ts back as something more readable
     mutate { id => "mutate_replace_zeek_ts"
@@ -3988,6 +4004,16 @@ filter {
              split => { "[zeek][proto]" => "," } }
     mutate { id => "mutate_merge_zeek_proto"
              merge => { "[protocol]" => "[zeek][proto]" } }
+
+    # ECS - zeek.proto -> network.transport
+    mutate { id => "mutate_add_field_ecs_network_iana_number"
+             add_field => { "[network][transport]" => "%{[zeek][proto]}" } }
+
+    if ([ipProtocol]) {
+      # ECS - ipProtocol -> network.iana_number
+      mutate { id => "mutate_add_field_ecs_network_iana_number"
+               add_field => { "[network][iana_number]" => "%{[ipProtocol]}" } }
+    }
   }
   if ([zeek][service]) {
     mutate { id => "mutate_split_zeek_service"
@@ -4001,6 +4027,14 @@ filter {
     }
     mutate { id => "mutate_merge_zeek_service"
              merge => { "[protocol]" => "[zeek][service]" } }
+
+    # ECS - zeek.service -> network.application, network.protocol
+    if ([zeek][service]) {
+      mutate { id => "mutate_add_field_ecs_network_application"
+               add_field => { "[network][application]" => "%{[zeek][service]}" } }
+      mutate { id => "mutate_add_field_ecs_network_protocol"
+               add_field => { "[network][protocol]" => "%{[zeek][service]}" } }
+    }
   }
 
   if ([log_source] == "conn") {
@@ -4170,6 +4204,16 @@ filter {
     if ([zeek_dhcp][host_name]) {
       mutate { id => "mutate_merge_zeek_dhcp_host_name"
                merge => { "[dhcp][host]" => "[zeek_dhcp][host_name]" } }
+
+      # ECS - zeek_dhcp.host_name -> client.domain
+      mutate { id => "mutate_add_field_ecs_client_domain_dhcp_host_name"
+               add_field => { "[client][domain]" => "%{[zeek_dhcp][host_name]}" } }
+    }
+
+    if ([zeek_dhcp][domain]) {
+      # ECS - zeek_dhcp.domain -> client.domain
+      mutate { id => "mutate_add_field_ecs_client_domain_dhcp_domain"
+               add_field => { "[client][domain]" => "%{[zeek_dhcp][domain]}" } }
     }
 
     if ([zeek_dhcp][assigned_ip]) {
@@ -4212,6 +4256,9 @@ filter {
     #############################################################################################################################
     # dns.log specific logic
 
+    mutate { id => "mutate_split_zeek_dns_TTLs"
+               split => { "[zeek_dns][TTLs]" => "," } }
+
     # this must be done because [dns][ip] only handles IPv4 or IPv6 addresses
     # but [answers] can contain hostnames as well
     if ([zeek_dns][answers]) {
@@ -4224,9 +4271,15 @@ filter {
                split => { "[zeek_dns][answers]" => "," } }
       mutate { id => "mutate_split_zeek_dns_answers_ip"
                split => { "[@metadata][answers_ip]" => "," } }
+      # ECS - zeek_dns -> dns.answers
+      ruby {
+        id => "ruby_zeek_dns_answers_to_ecs"
+        code => '
+          event.set("[dns][answers]", [Array(event.get("[zeek_dns][answers]")), Array(event.get("[zeek_dns][TTLs]"))].transpose.map{ |d| Hash[[:data, :ttl].zip(d)] })
+      '}
+      mutate { id => "mutate_add_field_ecs_dns_type_answer"
+               add_field => { "[dns][type]" => "answer" } }
     }
-    mutate { id => "mutate_split_zeek_dns_TTLs"
-               split => { "[zeek_dns][TTLs]" => "," } }
 
     if ([zeek_dns][query]) {
       mutate { id => "mutate_merge_zeek_query"
@@ -4253,6 +4306,9 @@ filter {
           "target" => "[dns][ipCnt]"
         }
       }
+      # ECS  dns.ip -> dns.resolved_ip
+      mutate { id => "mutate_merge_ecs_dhs_resolved_ip"
+               merge => { "[dns][resolved_ip]" => "[dns][ip]" } }
     }
 
     if ([zeek_dns][qclass_name]) {
@@ -4268,6 +4324,49 @@ filter {
       mutate { id => "mutate_add_field_dns_qtCnt"
                add_field => { "[dns][qtCnt]" => "1" } }
     }
+
+    # dns.op_code
+    if ([dns][opcode]) {                          mutate { id => "mutate_add_field_ecs_dns_opcode"
+                                                           add_field => { "[dns][op_code]" => "%{[dns][opcode]}" } } }
+
+    # dns.question.class
+    if ([zeek_dns][qclass_name]) {                mutate { id => "mutate_add_field_ecs_dns_qclass"
+                                                           add_field => { "[dns][question][class]" => "%{[zeek_dns][qclass_name]}" } } }
+
+    # dns.question.type
+    if ([zeek_dns][qtype_name]) {                 mutate { id => "mutate_add_field_ecs_dns_qtype"
+                                                           add_field => { "[dns][question][type]" => "%{[zeek_dns][qtype_name]}" } } }
+
+    # dns.question.name and dns.type:query
+    if ([zeek_dns][query]) {
+                          mutate { id => "mutate_add_field_ecs_dns_query"
+                                   add_field => { "[dns][question][name]" => "%{[zeek_dns][query]}" } }
+      if (![dns][type]) { mutate { id => "mutate_add_field_ecs_dns_type_query"
+                                   add_field => { "[dns][type]" => "query" } } }
+    }
+
+    if ([dns][type]) {
+      # dns.header_flags
+      if ([zeek][AA] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_aa"
+                                                           add_field => { "[dns][header_flags]" => "AA" } } }
+      if ([zeek][TC] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_tc"
+                                                           add_field => { "[dns][header_flags]" => "TC" } } }
+      if ([zeek][RD] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_rd"
+                                                           add_field => { "[dns][header_flags]" => "RD" } } }
+      if ([zeek][RA] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_ra"
+                                                           add_field => { "[dns][header_flags]" => "RA" } } }
+    }
+
+    # dns.response_code
+    if ([zeek_dns][rcode_name]) {                 mutate { id => "mutate_add_field_ecs_dns_response_code"
+                                                           add_field => { "[dns][response_code]" => "%{[zeek_dns][rcode_name]}" } } }
+
+    # dns.id
+    if ([zeek_dns][trans_id]) {                   mutate { id => "mutate_add_field_ecs_dns_id"
+                                                           add_field => { "[dns][id]" => "%{[zeek_dns][trans_id]}" } } }
+
+    # TODO: domain stuff (dns.question.registered_domain, dns.question.subdomain, dns.question.top_level_domain)
+    # perhaps use something like https://github.com/plutonbacon/logstash-filter-publicsuffix
 
   } else if ([log_source] == "files") {
     #############################################################################################################################
@@ -4313,6 +4412,37 @@ filter {
                  replace => { "[zeek_files][source]" => "XOR decrypted" } }
       }
     }
+
+    # ECS - "file" -> file.type
+    mutate { id => "mutate_add_field_ecs_file_type"
+             add_field => { "[file][type]" => "file" } }
+
+    # ECS - zeek_files.filename -> file.path
+    # ECS - zeek_files.filename -> file.file and file.name
+    if ([zeek_files][filename]) {
+      mutate { id => "mutate_add_field_ecs_file_path"
+               add_field => { "[file][path]" => "%{[zeek_files][filename]}" } }
+      grok {
+        id => "grok_zeek_files_filename_ecs"
+        match => { "[zeek_files][filename]" => [ "%{GREEDYDATA:[file][directory]}[\\\/]%{DATA:[file][name]}" ] }
+      }
+    }
+
+    # ECS -> zeek_files.mime_type -> file.mime_type
+    if ([zeek_files][mime_type]) {    mutate { id => "mutate_add_field_ecs_files_mime_type"
+                                      add_field => { "[file][mime_type]" => "%{[zeek_files][mime_type]}" } } }
+
+    # ECS -> zeek_files.total_bytes -> file.size
+    if ([zeek_files][total_bytes]) {  mutate { id => "mutate_add_field_ecs_files_size"
+                                      add_field => { "[file][size]" => "%{[zeek_files][total_bytes]}" } } }
+
+    # ECS -> zeek_files.(md5|sha1|sha256) -> file.hash.(md5|sha1|sha256)
+    if ([zeek_files][md5]) {          mutate { id => "mutate_add_field_ecs_files_hash_md5"
+                                      add_field => { "[file][hash][md5]" => "%{[zeek_files][md5]}" } } }
+    if ([zeek_files][sha1]) {         mutate { id => "mutate_add_field_ecs_files_hash_sha1"
+                                      add_field => { "[file][hash][sha1]" => "%{[zeek_files][sha1]}" } } }
+    if ([zeek_files][sha256]) {       mutate { id => "mutate_add_field_ecs_files_hash_sha256"
+                                      add_field => { "[file][hash][sha256]" => "%{[zeek_files][sha256]}" } } }
 
   } else if ([log_source] == "ftp") {
     #############################################################################################################################
@@ -4773,6 +4903,22 @@ filter {
       }
       if ([@metadata][decrypted_xor_fuid]) { mutate { id => "mutate_merge_zeek_notice_decrypted_xor_fuid"
                                                       merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
+    }
+
+  } else if ([log_source] == "ntlm") {
+    #############################################################################################################################
+    # ntlm.log specific logic
+
+    # ECS - zeek_ntlm.host -> client.domain
+    if ([zeek_ntlm][host]) {
+      mutate { id => "mutate_add_field_ecs_client_domain_ntlm_host_name"
+               add_field => { "[client][domain]" => "%{[zeek_ntlm][host]}" } }
+    }
+
+    # ECS - zeek_ntlm.domain -> client.domain
+    if ([zeek_ntlm][domain]) {
+      mutate { id => "mutate_add_field_ecs_client_domain_ntlm_domain"
+               add_field => { "[client][domain]" => "%{[zeek_ntlm][domain]}" } }
     }
 
   } else if ([log_source] == "ntp") {
@@ -5524,6 +5670,31 @@ filter {
     mutate { id => "mutate_merge_zeek_smb_cmd_and_smb_files_logType"
              merge => { "[zeek][logType]" => "[@metadata][tmpLogType]" } }
   }
+
+  # ECS - zeek.logType -> event.dataset
+  mutate { id => "mutate_add_field_ecs_event_dataset"
+           add_field => { "[event][dataset]" => "zeek.%{[zeek][logType]}" } }
+
+  # ECS - event.kind based on zeek.logType (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
+  if ([zeek_notice]) or ([zeek_signatures]) or ([zeek_weird]) {
+    mutate { id => "mutate_add_field_ecs_event_kind_alert"
+             add_field => { "[event][kind]" => "alert" } }
+  } else {
+    mutate { id => "mutate_add_field_ecs_event_kind_event"
+             add_field => { "[event][kind]" => "event" } }
+  }
+
+  # ECS - event.category based on zeek.logType (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
+  translate {
+    id => "translate_zeek_ecs_event_category"
+    field => "[zeek][logType]"
+    destination => "[event][category]"
+    dictionary_path => "/etc/zeek_log_ecs_categories.yaml"
+  }
+
+  # ECS - "zeek" -> event.provider
+  if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_zeek"
+                                     add_field => { "[event][provider]" => "zeek" } } }
 
   # get counts for some arrays that each log type may contribute to individually
   if ([protocol]) {
