--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -883,6 +883,9 @@ filter {
         "field" => "[zeek][action]"
       }
     }
+    # ECS - zeek.action -> event.action
+    mutate { id => "mutate_add_field_ecs_event_action"
+             add_field => { "[event][action]" => "%{[zeek][action]}" } }
   }
 
   if ([zeek][result]) {
@@ -893,6 +896,29 @@ filter {
         "field" => "[zeek][result]"
       }
     }
+
+    # ECS - zeek.result -> event.outcome
+    # TODO: this gets very granular and varies wildly per protocol, not sure I can translate these 100% from zeek.action and zeek.result
+    # event.type - https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-type.html
+    # event.outcome - https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-outcome.html
+    # Eeesh, this is a swag...
+    # if ([zeek][result]) {
+    #   ruby {
+    #     id => "ruby_ecs_event_outcome_zeek_result"
+    #     code => "
+    #       event.get('[zeek][result]').each { |zeekResult|
+    #         zeekResult.downcase!
+    #         if zeekResult =~ /(abo?rt|bad|busy|close|conflict|crit|declin|denied|deny|disabl|discon|down|err|exceed|exhaust|expir|fail|forbid|illeg|imposs|inappr|incorr|insuff|interrupt|misdirected|nak|no[ _-]*such|overload|problem|refus|reject|terminat|timeout|violat|wrong|(im|dis|mis|un|un|not)[ _-]*(avail|allow|assign|auth|deciph|process|permit|found|support|exist|enough|implem|known|ok|okay|reach|respond|consist|access|satis|succes|valid|want)|too[ _-]*(large|long|small|short|early|late|many|few))/
+    #           event.set('[event][outcome]', 'failure')
+    #           break
+    #         elsif zeekResult =~ /(ok|okay|success|ack|complet|correct|good|ready|finish|valid)/
+    #           event.set('[event][outcome]', 'success')
+    #           break
+    #         end
+    #       }
+    #     "
+    #   }
+    # }
   }
 
   # FUIDs #############################################################################################################
@@ -928,6 +954,9 @@ filter {
         "field" => "[zeek][fuid]"
       }
     }
+    # ECS - zeek.fuid -> event.id
+    mutate { id => "mutate_add_field_ecs_id_fuid"
+             merge => { "[event][id]" => "[zeek][fuid]" } }
   }
 
   # File/MIME types ###################################################################################################
