for idaholab/Malcolm#64, migrating ECS unit into individual parsing sections for log types

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -95,7 +95,7 @@ zeek.action=db:zeek.action;kind:termfield;friendly:Action;help:Action
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
 zeek.orig_l2_addr=db:zeek.orig_l2_addr;kind:termfield;friendly:Originating MAC;help:Originating MAC
 zeek.orig_p=db:zeek.orig_p;kind:integer;friendly:Originating port;help:Originating Port
-zeek.password=db:zeek.password;kind:termfield;friendly:Password;help:Password
+related.password=db:related.password;kind:termfield;friendly:Password;help:Password
 zeek.proto=db:zeek.proto;kind:lotermfield;friendly:Protocol;help:Protocol
 zeek.resp_h=db:zeek.resp_h;kind:termfield;friendly:Responding host;help:Responding Host
 zeek.resp_l2_addr=db:zeek.resp_l2_addr;kind:termfield;friendly:Responding MAC;help:Responding MAC
@@ -103,8 +103,8 @@ zeek.resp_p=db:zeek.resp_p;kind:integer;friendly:Responding port;help:Responding
 zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
 zeek.service=db:zeek.service;kind:termfield;friendly:Service;help:Service
 zeek.service_version=db:zeek.service_version;kind:termfield;friendly:Service Version;help:Service Version
-zeek.user=db:zeek.user;kind:termfield;friendly:User;help:User
-zeek.user_agent=db:zeek.user_agent;kind:termfield;friendly:User Agent;help:User Agent
+related.user=db:related.user;kind:termfield;friendly:User;help:User
+user_agent.original=db:user_agent.original;kind:termfield;friendly:User Agent;help:User Agent
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
