--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -240,8 +240,8 @@ filter {
                add_field => { "[event][severity_tags]" => "Weird" } }
     }
 
-    # if zeek.password exists, it's assumed to be in cleartext
-    if ([zeek][password]) {
+    # if related.password exists, it's assumed to be in cleartext
+    if ([related][password]) {
       mutate { id => "mutate_add_field_severity_password_exists"
                add_field => { "[event][severity_tags]" => "Cleartext password" } }
     }
