--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1036,8 +1036,28 @@ filter {
     }
   }
 
+  # ECS - file.path from file.directory and file.name, if present and not already populated
+  if ([file][directory]) and (![file][path]) {
+    if ([file][name]) {
+      mutate { id => "mutate_add_field_ecs_path_from_dir_and_name"
+               add_field => { "[file][path]" => "%{[file][directory]}/%{[file][name]}" } }
+    } else {
+      mutate { id => "mutate_add_field_ecs_path_from_dir_only"
+               add_field => { "[file][path]" => "%{[file][directory]}" } }
+    }
+  }
+  if ([file][name]) {
+    if (![file][type]) { mutate { id => "mutate_add_field_ecs_file_type_name"
+                                  add_field => { "[file][type]" => "file" } } }
+    # file.extension
+    grok {
+      id => "grok_zeek_files_fileext_ecs"
+      match => { "[file][name]" => [ "%{GREEDYDATA}\.%{DATA:[file][extension]}" ] }
+    }
+  }
+
   # User agents #######################################################################################################
-  # collect all user agents under the parent [zeek][user_agent] array
+  # collect all user agents under the parent (ECS) [user_agent][original] array
   if ([zeek_gquic][user_agent]) { mutate { id => "mutate_add_field_metadata_useragent_gquic"
                                            add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_gquic][user_agent]}" } } }
   if ([zeek_http][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_http"
@@ -1046,9 +1066,64 @@ filter {
                                            add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_sip][user_agent]}" } } }
   if ([zeek_smtp][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_smtp"
                                            add_field => { "[@metadata][generic_user_agent]" => "%{[zeek_smtp][user_agent]}" } } }
+  # ECS -> various -> user_agent.original (https://www.elastic.co/guide/en/ecs/current/ecs-user_agent.html)
+  #     - TODO: potentially more parsing could be done for user agent strings (.name, .device.name, .version)
   if ([@metadata][generic_user_agent]) {
-    mutate { id => "mutate_add_field_zeek_user_agent"
-             add_field => { "[zeek][user_agent]" => "%{[@metadata][generic_user_agent]}" } }
+    mutate { id => "mutate_add_field_user_agent_ecs"
+             add_field => { "[user_agent][original]" => "%{[@metadata][generic_user_agent]}" } }
   }
 
+  # Hashes ############################################################################################################
+  # ECS - various -> related.hash (accumulate all hash/fingerprint fields into related.hash)
+  if ([zeek_files][md5]) {                      mutate { id => "mutate_merge_field_related_hash_files_md5"
+                                                         merge => { "[related][hash]" => "[zeek_files][md5]" } } }
+  if ([zeek_files][sha1]) {                     mutate { id => "mutate_merge_field_related_hash_files_sha1"
+                                                         merge => { "[related][hash]" => "[zeek_files][sha1]" } } }
+  if ([zeek_files][sha256]) {                   mutate { id => "mutate_merge_field_related_hash_files_sha256"
+                                                         merge => { "[related][hash]" => "[zeek_files][sha256]" } } }
+  if ([zeek_ssh][hassh]) {                      mutate { id => "mutate_merge_field_related_hash_ssh_hassh"
+                                                         merge => { "[related][hash]" => "[zeek_ssh][hassh]" } } }
+  if ([zeek_ssh][hasshServer]) {                mutate { id => "mutate_merge_field_related_hash_ssh_hasshServer"
+                                                         merge => { "[related][hash]" => "[zeek_ssh][hasshServer]" } } }
+  if ([zeek_ssl][ja3]) {                        mutate { id => "mutate_merge_field_related_hash_ssl_ja3"
+                                                         merge => { "[related][hash]" => "[zeek_ssl][ja3]" } } }
+  if ([zeek_ssl][ja3s]) {                       mutate { id => "mutate_merge_field_related_hash_zeek_ssl_ja3s"
+                                                         merge => { "[related][hash]" => "[zeek_ssl][ja3s]" } } }
+
+  # IP addresses ######################################################################################################
+  # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
+  if ([zeek][orig_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_orig_h"
+                                                        merge => { "[related][ip]" => "[zeek][orig_h]" } } }
+  if ([zeek][resp_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_resp_h"
+                                                       merge => { "[related][ip]" => "[zeek][resp_h]" } } }
+  if ([zeek_dhcp][assigned_ip]) {              mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_assigned_ip"
+                                                        merge => { "[related][ip]" => "[zeek_dhcp][assigned_ip]" } } }
+  if ([zeek_dhcp][requested_ip]) {             mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_requested_ip"
+                                                        merge => { "[related][ip]" => "[zeek_dhcp][requested_ip]" } } }
+  if ([zeek_enip_list_identity][device_ip]) {  mutate { id => "mutate_merge_field_related_ip_zeek_enip_list_identity_device_ip"
+                                                        merge => { "[related][ip]" => "[zeek_enip_list_identity][device_ip]" } } }
+  if ([zeek_files][rx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_rx_hosts"
+                                                        merge => { "[related][ip]" => "[zeek_files][rx_hosts]" } } }
+  if ([zeek_files][tx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_tx_hosts"
+                                                        merge => { "[related][ip]" => "[zeek_files][tx_hosts]" } } }
+  if ([zeek_ftp][data_channel_orig_h]) {       mutate { id => "mutate_merge_field_related_ip_zeek_ftp_data_channel_orig_h"
+                                                        merge => { "[related][ip]" => "[zeek_ftp][data_channel_orig_h]" } } }
+  if ([zeek_ftp][data_channel_resp_h]) {       mutate { id => "mutate_merge_field_related_ip_zeek_ftp_data_channel_resp_h"
+                                                        merge => { "[related][ip]" => "[zeek_ftp][data_channel_resp_h]" } } }
+  if ([zeek_notice][dst]) {                    mutate { id => "mutate_merge_field_related_ip_zeek_notice_dst"
+                                                        merge => { "[related][ip]" => "[zeek_notice][dst]" } } }
+  if ([zeek_notice][src]) {                    mutate { id => "mutate_merge_field_related_ip_zeek_notice_src"
+                                                        merge => { "[related][ip]" => "[zeek_notice][src]" } } }
+  if ([zeek_radius][framed_addr]) {            mutate { id => "mutate_merge_field_related_ip_zeek_radius_framed_addr"
+                                                        merge => { "[related][ip]" => "[zeek_radius][framed_addr]" } } }
+  if ([zeek_smtp][path]) {                     mutate { id => "mutate_merge_field_related_ip_zeek_smtp_path"
+                                                        merge => { "[related][ip]" => "[zeek_smtp][path]" } } }
+  if ([zeek_smtp][x_originating_ip]) {         mutate { id => "mutate_merge_field_related_ip_zeek_smtp_x_originating_ip"
+                                                        merge => { "[related][ip]" => "[zeek_smtp][x_originating_ip]" } } }
+  if ([zeek_socks][bound_host]) {              mutate { id => "mutate_merge_field_related_ip_zeek_socks_bound_host"
+                                                        merge => { "[related][ip]" => "[zeek_socks][bound_host]" } } }
+  if ([zeek_socks][request_host]) {            mutate { id => "mutate_merge_field_related_ip_zeek_socks_request_host"
+                                                        merge => { "[related][ip]" => "[zeek_socks][request_host]" } } }
+  if ([zeek_x509][san_ip]) {                   mutate { id => "mutate_merge_field_related_ip_zeek_x509_san_ip"
+                                                        merge => { "[related][ip]" => "[zeek_x509][san_ip]" } } }
 }
