for idaholab/Malcolm#64, migrating ECS unit into individual parsing sections for log types

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -91,7 +91,7 @@ source.hostname=db:source.hostname;kind:termfield;friendly:Originating Host Name
 source.ip_reverse_dns=db:source.ip_reverse_dns;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
 source.oui=db:source.oui;kind:termfield;friendly:Originating OUI;help:Originating OUI
 source.segment=db:source.segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
-zeek.action=db:zeek.action;kind:termfield;friendly:Action;help:Action
+event.action=db:event.action;kind:termfield;friendly:Action;help:Action
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
 zeek.orig_l2_addr=db:zeek.orig_l2_addr;kind:termfield;friendly:Originating MAC;help:Originating MAC
 zeek.orig_p=db:zeek.orig_p;kind:integer;friendly:Originating port;help:Originating Port
@@ -100,7 +100,7 @@ zeek.proto=db:zeek.proto;kind:lotermfield;friendly:Protocol;help:Protocol
 zeek.resp_h=db:zeek.resp_h;kind:termfield;friendly:Responding host;help:Responding Host
 zeek.resp_l2_addr=db:zeek.resp_l2_addr;kind:termfield;friendly:Responding MAC;help:Responding MAC
 zeek.resp_p=db:zeek.resp_p;kind:integer;friendly:Responding port;help:Responding Port
-zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
+event.result=db:event.result;kind:termfield;friendly:Result;help:Result
 zeek.service=db:zeek.service;kind:termfield;friendly:Service;help:Service
 zeek.service_version=db:zeek.service_version;kind:termfield;friendly:Service Version;help:Service Version
 related.user=db:related.user;kind:termfield;friendly:User;help:User
